[gd_scene load_steps=8 format=3 uid="uid://ca87654321"]

[ext_resource type="Script" uid="uid://cenwi01vgvh37" path="res://scripts/GameScene.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dm3s4bqakkn4o" path="res://assets/images/desert_environment.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bcd8nt47gbl7j" path="res://assets/images/icon_rations.png" id="3"]
[ext_resource type="Texture2d" uid="uid://csovbkv6awug3" path="res://assets/images/icon_ammunition.png" id="4"]
[ext_resource type="Texture2D" uid="uid://cdhvc68gav6tt" path="res://assets/images/icon_gold.png" id="5"]
[ext_resource type="Texture2D" uid="uid://cvdjam1aiy1fa" path="res://assets/images/icon_members.png" id="6"]
[ext_resource type="Texture2D" path="res://assets/images/parchment_background.png" id="7_parchment_background"]
[ext_resource type="Script" uid="uid://dxd72vmqpq0h6" path="res://scripts/GameBoard.gd" id="8"]

[node name="GameScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
expand_mode = 2

[node name="ParchmentBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_parchment_background")
expand_mode = 1

[node name="GameBoard" type="Control" parent="ParchmentBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("8")

[node name="Player" type="TextureRect" parent="ParchmentBackground"]
layout_mode = 0
texture = load("res://assets/images/d6_shooters_leader.png")
expand_mode = 1
stretch_mode = 5
custom_minimum_size = Vector2(50, 50)

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResourcePanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 1280.0
grow_vertical = 0

[node name="RationsIcon" type="TextureRect" parent="UI/ResourcePanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -24.0
offset_right = 58.0
offset_bottom = 24.0
grow_vertical = 2
texture = ExtResource("3")
expand_mode = 1

[node name="RationsLabel" type="Label" parent="UI/ResourcePanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 60.0
offset_top = -12.0
offset_right = 160.0
offset_bottom = 12.0
grow_vertical = 2
text = "6"

[node name="AmmunitionIcon" type="TextureRect" parent="UI/ResourcePanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 170.0
offset_top = -24.0
offset_right = 218.0
offset_bottom = 24.0
grow_vertical = 2
texture = ExtResource("4")
expand_mode = 1

[node name="AmmunitionLabel" type="Label" parent="UI/ResourcePanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 220.0
offset_top = -12.0
offset_right = 320.0
offset_bottom = 12.0
grow_vertical = 2
text = "6"

[node name="GoldIcon" type="TextureRect" parent="UI/ResourcePanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 330.0
offset_top = -24.0
offset_right = 378.0
offset_bottom = 24.0
grow_vertical = 2
texture = ExtResource("5")
expand_mode = 1

[node name="GoldLabel" type="Label" parent="UI/ResourcePanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 380.0
offset_top = -12.0
offset_right = 480.0
offset_bottom = 12.0
grow_vertical = 2
text = "3"

[node name="MembersIcon" type="TextureRect" parent="UI/ResourcePanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 490.0
offset_top = -24.0
offset_right = 538.0
offset_bottom = 24.0
grow_vertical = 2
texture = ExtResource("6")
expand_mode = 1

[node name="MembersLabel" type="Label" parent="UI/ResourcePanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 540.0
offset_top = -12.0
offset_right = 640.0
offset_bottom = 12.0
grow_vertical = 2
text = "12"

[node name="DaysLabel" type="Label" parent="UI/ResourcePanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 650.0
offset_top = -12.0
offset_right = 750.0
offset_bottom = 12.0
grow_vertical = 2
text = "DÃ­as: 0"

[node name="DicePanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_bottom = 200.0
grow_horizontal = 0

[node name="RollButton" type="Button" parent="UI/DicePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -40.0
offset_right = 50.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Tirar Dados"

[node name="ResolveButton" type="Button" parent="UI/DicePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -80.0
offset_right = 50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
disabled = true
text = "Resolver"

[connection signal="pressed" from="UI/DicePanel/RollButton" to="." method="_on_RollButton_pressed"]
[connection signal="pressed" from="UI/DicePanel/ResolveButton" to="." method="_on_ResolveButton_pressed"]


